--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@ title: Cover
 
 <h2>可用版本</h2>
 
-目前本书主要提供 <a href="http://perl.linuxtoy.org/contents.html">HTML</a>
+<p>目前本书主要提供 <a href="http://perl.linuxtoy.org/contents.html">HTML</a>
 格式版本。另外，网友 oboooks 制作了本书的 <a href="http://oboooks.github.io/book/perl-things.html">
-PDF</a> 格式版本。
+PDF</a> 格式版本。</p>
 
 <h2>目录</h2>
 
